--- a/style.css
+++ b/style.css
@@ -13,15 +13,17 @@ h1{
 
 section{
     display: flex;
+    margin-bottom: 90px;
 }
 
 .half-width{
-    width: 50%;
-    padding: 5%;
+    width: 40%;
+    margin-left: 5%;
+    padding-left: 2%;
 }
 
 .half-width img{
-    width: 80%;
+    width: 90%;
 }
 
 .link-button{
@@ -37,4 +39,10 @@ section{
 .top-banner{
     background-image: url(images/top-banner.png);
     background-repeat: no-repeat;
+}
+
+.dream-big{
+    background-image: url(images/dream-bg.png);
+    background-repeat: no-repeat;
+    background-position: right;
 }
