--- a/style.css
+++ b/style.css
@@ -7,11 +7,15 @@ h1{
     font-size: 50px;
 }
 
+h2{
+    font-size: 40px;
+}
+
 .orange-colour{
     color: orange;
 }
 
-section{
+.flexible-container{
     display: flex;
     margin-bottom: 90px;
 }
@@ -45,4 +49,36 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+
+.experience-item{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    border-radius: 10px;
+    box-shadow: 10px 10px 40px gray;
+    /* border-left: 7px solid blue; */
+}
+
+#baby-web{
+    border-left: 7px solid blue;
+}
+
+#full-stack{
+    border-left: 7px solid tomato;
+}
+
+footer p{
+    text-align: center;
+}
+
+footer a{
+    text-decoration: none;
 }
