--- a/style.css
+++ b/style.css
@@ -23,16 +23,18 @@ h2{
 .flexible-container{
     display: flex;
     margin-bottom: 90px;
+    height: 80%;
 }
 
 .half-width{
     width: 40%;
+    float: left;
     margin-left: 5%;
     padding-left: 2%;
 }
 
 .half-width img{
-    width: 90%;
+    width: 100%;
 }
 
 .link-button{
